# talker-thinker

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  eval_report.html  main.py  pyproject.toml  requirements.txt  setup.sh
agents/: llm_client.py
agents/talker/: __init__.py  agent.py
agents/thinker/: __init__.py  agent.py
config/: __init__.py  keywords_manager.py  settings.py
context/: __init__.py  knowledge_base.py  long_term_memory.py  session_context.py  shared_context.py  summarizer.py  types.py  working_context.py
data/keywords/: base_keywords.json  hot_keywords.json  topics.json  user_keywords.json
docs/: agents_thinking_fast_and_slow_complete_report.md  interaction-test-log.md  multi-task-management-fix.md  optimization-plan.md  optimization-review.md  optimization_log_2026-02-22.md  talker-full-handoff-fix.md  talker-promptmgr-integration.md  talker-thinker-collaboration-analysis(0219).md  talker-thinker-collaboration-analysis.md  talker_optimization.md
evals/: README.md  __init__.py  __main__.py  assertions.py  evals_record.md  harness.py
evals/cases/: __init__.py  complex.py  conversation.py  edge.py  medium.py  simple.py  ux_quality.py
evals/core/: __init__.py  types.py
evals/fixtures/: __init__.py  mock_skills.py  test_data.py
evals/metrics/: __init__.py  accuracy.py  collector.py  latency.py  quality.py
evals/reporters/: __init__.py  console.py  html.py  json_reporter.py
evals/results/: eval_report.html  eval_result.json
monitoring/: __init__.py  alerts.py  logging.py  metrics.py
orchestrator/: __init__.py  coordinator.py  scheduler.py
prompts/: __init__.py  manager.py
prompts/dynamic/: __init__.py  intent_adaptor.py
prompts/injectors/: __init__.py  context_injector.py  (+2 more)
skills/: __init__.py  base.py  engine.py  invoker.py
tests/: conftest.py  test_agents.py  test_all.py  test_broadcast_optimization.py  test_context.py  test_context_exit_fix.py  test_keywords_manager.py  test_p0_p1.py  test_regression.py  test_skills.py  test_tui_optimization.py  test_tui_timing.py
tui/: __init__.py  input.py
(+14 files in other folders)
